k8s/elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic
  labels:
    app: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms512m -Xmx512m
        - name: cluster.name
          value: elasticsearch
        - name: discovery.type
          value: single-node
        - name: network.bind_host
          value: 0.0.0.0
        - name: network.publish_host
          value: elastic
        - name: xpack.security.enabled
          value: "false"
        image: docker.elastic.co/elasticsearch/elasticsearch:6.4.0
        name: elastic
        ports:
        - containerPort: 9200
        - containerPort: 9300
      hostname: elastic
      restartPolicy: Always
      subdomain: divolte-divolte
