k8s/clickstream-analyzer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: clickstream-analyzer
  name: clickstream-analyzer
spec:
  ports:
  - name: "7077"
    port: 7077
    targetPort: 7077
  - name: "4040"
    port: 4040
    targetPort: 4040
  - name: "18080"
    port: 18080
    targetPort: 18080
  selector:
    io.kompose.service: clickstream-analyzer
status:
  loadBalancer: {}
