k8s/clickstream-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: clickstream-collector
  name: clickstream-collector
spec:
  ports:
  - name: "8290"
    port: 8290
    targetPort: 8290
  selector:
    io.kompose.service: clickstream-collector
status:
  loadBalancer: {}
