k8s/elastic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic
  labels:
    app: elastic
spec:
  ports:
  - name: "9200"
    port: 9200
    targetPort: 9200
  - name: "9300"
    port: 9300
    targetPort: 9300
  selector:
    app: elastic
