k8s/shop-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-api
  labels:
    app: shop-api
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    app: shop-api
