k8s/shop-webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shop-webapp
  labels:
    app: shop-webapp
spec:
  ports:
  - name: "9011"
    port: 9011
    targetPort: 9011
  selector:
    app: shop-webapp
  type: LoadBalancer
