k8s/toppick-bandit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toppick-bandit
  labels:
    app: toppick-bandit
spec:
  ports:
  - name: "8989"
    port: 8989
    targetPort: 8989
  selector:
    app: toppick-bandit
